CRUD endpoints for product
